# apex-engine

./: CMakeLists.txt
src/: glad.c  glad.h  main.cpp
src/apex/: CMakeLists.txt  apex.h  core.cpp  window.cpp  window.h
